# accountcat

./: .containerignore  .gitignore  Cargo.toml  Containerfile  README.md  build.rs  compose.dev.yaml  compose.e2e.yaml  compose.yaml  lefthook.yml  server.test.toml  test_iterator  test_iterator.rs
accountcat-server/: .gitignore  Cargo.toml  Containerfile  build.rs  compose.dev.yaml
accountcat-server/.sqlx/: query-0ea8ced483fbe3bf3f793d18d9ce05e05109a8be183ce85cadcd58066e7855c7.json  query-49642cf9d6f19f4b1c5856f0e08e37dcbc7f9ed9b03bdd461e7954899d3f6612.json  query-4ba35ebcb7aae91d7b44a9cc84c6bfc6174f8017fc19d3507fe541e8ab43249e.json  query-4dc671193bea6714b423751c71a4eef98f6c38ec48dbc926953ea46d5bdc0f32.json  query-55a52e9a2c6b61cdd1580592a315af376cbb31e8f6f6bdb018abb6e2acf70c96.json  query-564c417ab120c64a0bd682c55000fd5304c9aa36a23d6132c758a83cc805d325.json  query-63ecfac7c011b9751e3e4f3ca078836565dac21a8aef71d9b15ca22879d1d35f.json  query-65704eec3079fd7aeb5cc6839a3c46fa49c38a29d3b523d63019088d2d614890.json  query-6e16539919c951dd56787d2099fbbf4f944b1bdb3a243111e5e6ffd531530075.json  query-7bca7d7fcdeabe8f9a824d9c3a28821c3f226d3e6d8e5b953ed44e5a5ea21334.json  query-890e0df7c64b5f25308937124084a8931c5e2386a26dd5dca43a2330a5b10ede.json  query-8ff698a04513c24a0dcf29c4da968d161f34bf4fe42b7b525ba3fc2be390c9dd.json  query-98fa401602a4a86c40fd5ae0179aca2251a6fc39644635b890e724c2b343aac3.json  query-af1982515854d8e4f301d38d23274d8ad2f98942d48b2b7f7a57bfbf7c3f25cf.json  query-b06fdb0dfff0d0df05a75f256640dc6a42580db9c9be5d8f194a741efe945bc9.json  query-b757454402ac2aa8c28758fe0adbf5f8d1cd8208549c5a0c3626fddac5119e97.json  query-bd73028e492ed4598e66a5bd76129f3a083da2ce9432d8e283b89c3f606985cc.json  query-bdfff827d4e365c4f27a752a593a4645e21c01350558190279789d2dcd8660c5.json  query-bf2c4ce0f7577abe84272ca136c4f23d12f8d06cffedd052c32c8ddf46e3fdd8.json  query-c3bd409d93c8cbd21aca4c40667a1ed76a9ef50696169042a68cf046fae47a6c.json  query-cc00a3bdddeb4fd5ddf0fb7b4e37260b0b8d5122f8fe44f0a98f40fdacde73f8.json  query-cf819fa45aeb2729b07495152bd1d66c4bde6344ce5cbc10aff5610b21ae4d58.json  query-cfa41cf9fe84555b98ce8e3403db083bdd5b9b881c359ee15f1f33134020191b.json  query-e218812d9f9e2f18a3da9a63f8b3d4dcacca30b405d159ec42c365fae476206d.json  query-e47685c6f4890b6eb73dfbb03a43eae80c6acc4ca4b3624f97e2fffe342ddb36.json  query-e4b4e684b7c22975e252e47127f2b9164b1e96a00bc32c70cfba8fb088fa4b48.json  query-eda43d83be095039e893d170b685d70389d8d9d07f0fb766df25054892179c0f.json  query-fb7d3f1e1103003330fe589a26cc51497c2a6727136401a4c2b3a6069eab6941.json
accountcat-server/migrations/: 20250801140440_create_todo_tasks.up.sql  20250804062853_create_tower_sessions.up.sql  20250808124859_create_tags.up.sql  20250811063252_create_accounting_item_tags.up.sql  20250819091844_combine_income_expense_columns_of_accounting_items.up.sql  20250820052653_add_currency_to_accouting_items.down.sql  20250820052653_add_currency_to_accouting_items.up.sql  20250828131023_modify_accounting_item_tags_foreign_key_constraint.down.sql  20250831112841_add_occurred_at_to_accounting_items.up.sql  20250918090233_add_announcements_table.down.sql  20250918090233_add_announcements_table.up.sql  20251108091248_add_certificates_table.down.sql  20251108091248_add_certificates_table.up.sql  20251118000000_track_certificate_authorities.down.sql  20251118000000_track_certificate_authorities.up.sql  20251126000000_track_subject_key_ids.down.sql  20251126000000_track_subject_key_ids.up.sql
accountcat-server/src/: auth.rs  idl.rs  (+13 more)
(+136 files in other folders)
