[package]
name = "accountcat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
