[package]
name = "accountcat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.44", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
iso_currency = { version = "0.5.3", features = ["iterator", "with-sqlx-postgres"] }
jsonwebtoken = "9.3.1"
mime_guess = "2.0.5"
pin-project-lite = "0.2.16"
prost = "0.13.5"
prost-types = "0.13.5"
reqwest = { version = "0.12.22", default-features = false, features = ["charset", "http2", "json", "rustls-tls-webpki-roots"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "time", "bigdecimal"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
tonic = "0.13.1"
tonic-web = "0.13.1"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["v4"] }
hash-ids = "0.3"
time = "0.3.41"
num-traits = "0.2.19"
rcgen = "0.14.5"
thiserror = "2.0.17"

[build-dependencies]
tonic-build = "0.13.1"

[dev-dependencies]
http-body-util = "0.1.3"
temp-dir = "0.1.16"
